[gd_scene load_steps=9 format=3 uid="uid://cxb5vbh0s16uq"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b6wunh6737fcb" path="res://scenes/game/bird/bird.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://b1eby2apm4lyy" path="res://scenes/game/pipe/pipe.tscn" id="2_oplab"]
[ext_resource type="Script" path="res://scenes/game/main_camera.gd" id="3_0ucgu"]
[ext_resource type="PackedScene" uid="uid://m85giv4g6ai5" path="res://scenes/background/background.tscn" id="4_q4xbu"]
[ext_resource type="Script" path="res://scenes/game/world_manager.gd" id="7_gqn0k"]
[ext_resource type="PackedScene" uid="uid://daspbr1sqqe1j" path="res://scenes/gui/gui.tscn" id="9"]
[ext_resource type="PackedScene" path="res://scenes/screen_flash.tscn" id="10"]

[node name="Main" type="Node"]
script = ExtResource("1")

[node name="MainCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
process_priority = 10
position_smoothing_enabled = true
script = ExtResource("3_0ucgu")

[node name="Background" parent="." instance=ExtResource("4_q4xbu")]

[node name="Bird" parent="." instance=ExtResource("2")]
unique_name_in_owner = true
process_priority = 5
process_physics_priority = 5
z_index = 10
position = Vector2(0, -4.99918)

[node name="WorldManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("7_gqn0k")
pipe_scene = ExtResource("2_oplab")

[node name="Obstacles" type="Node2D" parent="WorldManager"]

[node name="GUI" parent="." instance=ExtResource("9")]
unique_name_in_owner = true

[node name="Transition" parent="GUI" index="3"]
layer = 100

[node name="ScreenFlash" parent="." instance=ExtResource("10")]

[connection signal="died" from="Bird" to="." method="_on_bird_died" flags=18]
[connection signal="hit" from="Bird" to="." method="_on_bird_hit" flags=18]
[connection signal="score_changed" from="Bird" to="." method="_on_bird_score_changed" flags=18]
[connection signal="prepare_game" from="GUI/StartScreen" to="." method="_on_gui_prepare_game" flags=18]
[connection signal="pause_changed" from="GUI/PlayingScreen" to="." method="_on_gui_pause"]
[connection signal="start_game" from="GUI/PlayingScreen" to="." method="_on_gui_start_game" flags=18]
[connection signal="reset_game" from="GUI/GameOverScreen" to="." method="_on_gui_reset_game" flags=18]

[editable path="GUI"]
